Dependencies + Development Environment Tweaks (#80)
* VS.Code setup tweaks + README

* Additional dependencies fixed

* Last dependency

* Code completion in Python

* Additional path

* Python dependencies and configuration

* Fix cleanup

* Prevent monitoring .venv

* Remove warnings from web

---------

Co-authored-by: Steven Askwith <askwith@amazon.co.uk>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,16 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": "explicit"
     }
+  },
+  "python.analysis.extraPaths": [
+    "./lib/lambda_layers/helper_functions",
+    "./lib/lambda_layers/appsync_helpers"
+  ],
+  "files.watcherExclude": {
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/node_modules/*/**": true,
+    "**/cdk.out/**": true,
+    "**/.venv/**": true
   }
 }
