--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "20.5.6",
-    "@types/prettier": "3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
-    "aws-cdk": "2.122.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "aws-cdk": "2.166.0",
     "eslint": "^8.48.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^9.0.0",
@@ -49,14 +49,14 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.6.4",
-    "prettier": "^3.0.3",
+    "prettier": "^3.4.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-python-alpha": "^2.122.0-alpha.0",
-    "aws-cdk-lib": "2.122.0",
+    "@aws-cdk/aws-lambda-python-alpha": "^2.166.0-alpha.0",
+    "aws-cdk-lib": "2.166.0",
     "awscdk-appsync-utils": "^0.0.190",
     "cdk-nag": "2.27.111",
     "cdk-serverless-clamscan": "^2.5.64",
