--- a/website/package.json
+++ b/website/package.json
@@ -80,10 +80,14 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.4.2",
+    "typescript": "5.2.2"
   },
   "overrides": {
     "@svgr/webpack": "$@svgr/webpack",
+    "react-scripts": {
+      "typescript": "^5"
+    },    
     "react-refresh": "^0.14.0"
   }
 }
