--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
     "**/node_modules/*/**": true,
     "**/cdk.out/**": true,
     "**/.venv/**": true
-  }
+  },
+  "kiroAgent.configureMCP": "Disabled"
 }
